Bug 478764 - Cannot resize Kickoff/applets vertically
Summary: Cannot resize Kickoff/applets vertically
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.90.0
Platform: Neon Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6, regression
Depends on:
Blocks:
 
Reported: 2023-12-20 10:51 UTC by Patrick Silva
Modified: 2023-12-22 18:13 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-12-20 10:51:31 UTC
STEPS TO REPRODUCE
1. open Kickoff or a system tray applet
2. try to resize Kickoff/applet vertically
3. 

OBSERVED RESULT
we can't resize Kickoff/applet vertically because the mouse pointer does not change to resizing mode.

EXPECTED RESULT
we are able to resize Kickoff/applet vertically.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.90.90
KDE Frameworks Version: 5.247.0
Qt Version: 6.6.1
Graphics Platform: Wayland
Comment 1 Nate Graham 2023-12-20 21:51:43 UTC
Some condition is reversed somewhere. With a bottom panel, widgets can't be resized from the top, and with a top panel, widgets can't be resized from the bottom. Everything works as expected with a left or right panel.
Comment 2 guimarcalsilva 2023-12-21 03:03:29 UTC
(In reply to Nate Graham from comment #1)
> Some condition is reversed somewhere. With a bottom panel, widgets can't be
> resized from the top, and with a top panel, widgets can't be resized from
> the bottom. Everything works as expected with a left or right panel.

This is just a guess, but maybe the fix for bug 475673 caused it? https://invent.kde.org/plasma/libplasma/-/merge_requests/996

Maybe it's preventing resizing on the wrong side.
Comment 3 Bug Janitor Service 2023-12-22 17:38:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/1022
Comment 4 Arjen Hiemstra 2023-12-22 18:13:28 UTC
Git commit f2c451650df19ef41f6364196bc68052773e77b6 by Arjen Hiemstra.
Committed on 22/12/2023 at 18:38.
Pushed by davidedmundson into branch 'master'.

Fix PopupPlasmaWindow::effectivePopupDirection being the wrong way around

When a popup would open above a panel this would result in
`effectivePopupDirection` being `Qt::BottomEdge` and similarly for the
other edges. Due to this, the condition the code that applied resizing
would disable the incorrect edge (the one on the opposite of the edge on
the panel), breaking popup resizing.
Related: bug 477880

M  +8    -8    src/plasmaquick/popupplasmawindow.cpp

https://invent.kde.org/plasma/libplasma/-/commit/f2c451650df19ef41f6364196bc68052773e77b6